--- a/src/pages/DeptListPage/deptListPageStyle.module.css
+++ b/src/pages/DeptListPage/deptListPageStyle.module.css
@@ -1,7 +1,8 @@
 .container {
+  padding-top: 80px;
   width: 100vw;
   height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
+  height: calc((var(--vh, 1vh) * 100) - 80px);
   background: rgb(253, 135, 98);
   background: linear-gradient(
     180deg,
@@ -9,8 +10,18 @@
     rgba(233, 92, 85, 1) 50%,
     rgba(214, 49, 72, 1) 100%
   );
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
-
+.container div:nth-child(1) {
+  position: relative;
+  align-self: flex-start;
+}
+.container div:nth-child(3) {
+  position: relative;
+}
 .deptIconIndex {
   width: 15px;
   height: 15px;
